--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6fdda442-e97f-492b-bf04-d35ddb9fa9a8",
    "metadata": {},
    "source": [
     "# Debug Qiskit Runtime jobs\n",
@@ -17,6 +18,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f45208bc-4f68-4d99-880e-cd5d980c3cca",
    "metadata": {},
    "source": [
     "## Define the estimation problem\n",
@@ -27,6 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "71fe51fd-680f-413d-993b-caa0a417dee9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "6026187e-b4ee-4676-8091-2b9ba535429a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +66,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1cc09369-01df-4b8a-9a1d-b5c798162659",
    "metadata": {},
    "source": [
     "## Initialize a target circuit\n",
@@ -75,6 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "f399bb00-b605-44fc-ad0b-7f744a323413",
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +137,7 @@
     "\n",
     "    return qc\n",
     "\n",
+    "\n",
     "# Generate a random circuit\n",
     "qc = generate_circuit(6, 3)\n",
     "isa_qc = pm.run(qc)\n",
@@ -140,6 +147,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c3bdcfc-c5bb-4840-b4ca-664cf2a1796a",
    "metadata": {},
    "source": [
     "Choose single-Pauli `Z` errors as observables and use them to initialize the primitive unified blocs (PUBs)."
@@ -148,6 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "ee537d7b-f934-483d-87d9-0fbf6c4ab8df",
    "metadata": {},
    "outputs": [
     {
@@ -169,24 +178,26 @@
     "# Initialize the PUBs, which consist of six-qubit circuits with `n_layers` 1, ..., 6\n",
     "all_n_layers = [1, 2, 3, 4, 5, 6]\n",
     "\n",
-    "pubs = [(pm.run(generate_circuit(6, n)), isa_obs) for n in all_n_layers]\n"
+    "pubs = [(pm.run(generate_circuit(6, n)), isa_obs) for n in all_n_layers]"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "1f500281-fff8-4ad9-b01d-983ea01e07c0",
    "metadata": {},
    "source": [
     "## Cliffordize the circuits\n",
     "\n",
-    "The previously defined PUB circuits are not Clifford, which makes them difficult to simulate classically. However, you can use the `Neat` [`to_clifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#to_clifford) method to map tham to Clifford circuits for more efficient simulation.  The [`to_clifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#to_clifford) method is a wrapper around the [`ConvertISAToClifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.transpiler.passes.ConvertISAToClifford) transpiler pass. In particular, it replaces non-Clifford single-qubit gates in the original circuit with Clifford single-qubit gates, but it does not mutate the two-qubit gates, number of qubits, and circuit depth. \n",
+    "The previously defined PUB circuits are not Clifford, which makes them difficult to simulate classically. However, you can use the `Neat` [`to_clifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#to_clifford) method to map tham to Clifford circuits for more efficient simulation.  The [`to_clifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#to_clifford) method is a wrapper around the [`ConvertISAToClifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.transpiler.passes.ConvertISAToClifford) transpiler pass. In particular, it replaces non-Clifford single-qubit gates in the original circuit with Clifford single-qubit gates, but it does not mutate the two-qubit gates, number of qubits, and circuit depth.\n",
     "\n",
-    "The simulation can be done in both ideal ([`ideal_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#ideal_sim)) and noisy ([`noisy_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#noisy_sim)) conditions. The simulated results support mathematical operations, and can therefore be compared with each other (or with experimental results) to calculate figures of merit.  \n",
+    "The simulation can be done in both ideal ([`ideal_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#ideal_sim)) and noisy ([`noisy_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#noisy_sim)) conditions. The simulated results support mathematical operations, and can therefore be compared with each other (or with experimental results) to calculate figures of merit.\n",
     "\n",
     "See [Efficient simulation of stabilizer circuits with Qiskit Aer primitives](/guides/simulate-stabilizer-circuits) for more information about Clifford circuit simulation."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e7667bb1-3f38-48c5-9b79-5a6e92207dd8",
    "metadata": {},
    "source": [
     "First, initialize `Neat`."
@@ -195,6 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "91e9772a-e012-4ec4-ae3c-f47de339840e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +220,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "def02c0d-8a49-43b9-b37e-950e63ade25d",
    "metadata": {},
    "source": [
     "Next, Cliffordize the PUBs."
@@ -216,6 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "8d960b20-3283-4715-8cda-ae22fe4f6cd5",
    "metadata": {},
    "outputs": [
     {
@@ -238,6 +252,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7936df6b-0463-4216-93f6-abe593982843",
    "metadata": {},
    "source": [
     "## Application 1: Analyze the impact of noise on the circuit outputs\n",
@@ -250,6 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "55ed3526-d9d7-4548-944a-c58b10cd6d65",
    "metadata": {},
    "outputs": [
     {
@@ -283,6 +299,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af759188-9b6c-4cb6-b7a3-9e2c8aa0188b",
    "metadata": {},
    "source": [
     "These results support mathematical operators and can be used to compute figures of merit.\n",
@@ -294,6 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "97a35038-aea4-4626-88a5-7f8bbd8021c3",
    "metadata": {},
    "outputs": [
     {
@@ -346,6 +364,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6e7c91d1-9cec-433c-bb0a-e9b44ae91105",
    "metadata": {},
    "source": [
     "You can specify different noise models in the analyzer. For example, you can study the impact of depolarizing noise on your PUBs."
@@ -354,6 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "d3d37157-d793-4ca9-bba4-235bc80b97e0",
    "metadata": {},
    "outputs": [
     {
@@ -413,6 +433,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b4da945-7916-4b69-b5c8-1e1c504c41a9",
    "metadata": {},
    "source": [
     "As shown, given a noise model, you can try to quantify the impact of noise on the (Cliffordized version of the) PUBs of interest before running them on a QPU."
@@ -420,6 +441,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "09a63a33-0647-4540-9ba1-79c65ed3a636",
    "metadata": {},
    "source": [
     "## Application 2: Benchmark different strategies\n",
@@ -430,6 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "3e9d8bc5-3177-411b-b803-4f8b0cb5d339",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,6 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "13425f07-37c8-48fc-b2d0-403085f106f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,6 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9a8f5b5e-2efd-42d6-82f0-7b8396823d75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,6 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a2a859e0-91fd-4700-b8ba-ca7e2991217d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,6 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "62f3e820-a068-4e5f-8fef-2e7c446a34e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,6 +533,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c6be9e9-ce96-4b8a-a09f-68eec5c6d99d",
    "metadata": {},
    "source": [
     "The result with the smallest difference helps you decide which options to choose."
@@ -513,6 +541,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c94186a-d022-4745-a017-6fd7fe287265",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -531,7 +560,7 @@
  "metadata": {
   "description": "Use the Qiskit Runtime Debugging tools module and `Neat` class to debug and analyze jobs.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -545,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Debug Qiskit Runtime jobs"
  },
