change to absolute difference

--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -303,9 +303,9 @@
    "metadata": {},
    "source": [
     "These results support mathematical operators and can be used to compute figures of merit.\n",
-    "The remainder of the guide uses the relative difference as a figure of merit to compare ideal results with noisy or experimental results, but similar figures of merit can be set up in a similar way.\n",
+    "The remainder of the guide uses the absolute difference as a figure of merit to compare ideal results with noisy or experimental results, but similar figures of merit can be set up.\n",
     "\n",
-    "The relative difference shows that the impact of noise grows with the circuits' sizes."
+    "The absolute difference shows that the impact of noise grows with the circuits' sizes."
    ]
   },
   {
@@ -340,13 +340,13 @@
     }
    ],
    "source": [
-    "# Figure of merit: Relative difference\n",
+    "# Figure of merit: Absolute difference\n",
     "def rdiff(res1, re2):\n",
-    "    r\"\"\"The relative difference between `res1` and re2`.\n",
+    "    r\"\"\"The absolute difference between `res1` and re2`.\n",
     "\n",
     "    --> The closer to `0`, the better.\n",
     "    \"\"\"\n",
-    "    d = abs(res1 - re2) / res1\n",
+    "    d = abs(res1 - re2)\n",
     "    return np.round(d.vals * 100, 2)\n",
     "\n",
     "\n",
@@ -355,11 +355,23 @@
     "):\n",
     "    vals = rdiff(ideal_res, noisy_res)\n",
     "\n",
-    "    # Print the mean relative difference for the observables\n",
+    "    # Print the mean absolute difference for the observables\n",
     "    mean_vals = np.round(np.mean(vals), 2)\n",
     "    print(\n",
-    "        f\"Mean relative difference between ideal and noisy results for circuits with {all_n_layers[idx]} layers:\\n  {mean_vals}%\\n\"\n",
+    "        f\"Mean absolute difference between ideal and noisy results for circuits with {all_n_layers[idx]} layers:\\n  {mean_vals}%\\n\"\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can follow these rough and simplified guidelines to improve circuits of this type:\n",
+    "\n",
+    "- If the mean absolute difference is > 90%, mitigation will likely not help.\n",
+    "- Otherwise, PEA can improve the results.\n",
+    "  \n",
+    "Because all of the absolute differences above are greater than 90%, applying PEA to the original circuit will hopefully improve the quality of its results."
    ]
   },
   {
@@ -424,11 +436,21 @@
     "):\n",
     "    values = rdiff(ideal_res, noisy_res)\n",
     "\n",
-    "    # Print the mean relative difference for the observables\n",
+    "    # Print the mean absolute difference for the observables\n",
     "    mean_values = np.round(np.mean(values), 2)\n",
     "    print(\n",
-    "        f\"Mean relative difference between ideal and noisy results for circuits with {all_n_layers[idx]} layers:\\n  {mean_values}%\\n\"\n",
+    "        f\"Mean absolute difference between ideal and noisy results for circuits with {all_n_layers[idx]} layers:\\n  {mean_values}%\\n\"\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have some rough and simplified guidelines which we can use to improve circuits of this type:\n",
+    "- If the absolute difference is > 0.9, mitigation will likely not help\n",
+    "- Otherwise, PEA can improve the results\n",
+    "Since all of the absolute difference above are < 0.9, we can be hopeful that applying PEA to the original circuit will allow us to improve the quality of its results"
    ]
   },
   {
