--- a/docs/api/qiskit-addon-mpf/static.mdx
+++ b/docs/api/qiskit-addon-mpf/static.mdx
@@ -29,6 +29,11 @@ $$
 
   Create new instance of LSE(A, b)
 
+  **Parameters**
+
+  *   **A** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)"))
+  *   **b** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)"))
+
   #### A
 
   <Attribute id="qiskit_addon_mpf.static.LSE.A" attributeTypeHint="ndarray">
@@ -39,12 +44,6 @@ $$
 
   <Attribute id="qiskit_addon_mpf.static.LSE.b" attributeTypeHint="ndarray">
     The right hand side of the LSE.
-  </Attribute>
-
-  #### x
-
-  <Attribute id="qiskit_addon_mpf.static.LSE.x" attributeTypeHint="Variable">
-    Returns the \$x\$ [`Variable`](https://www.cvxpy.org/api_reference/cvxpy.expressions.html#cvxpy.expressions.variable.Variable "(in CVXPY v1.5)").
   </Attribute>
 
   #### count
@@ -78,6 +77,12 @@ $$
 
     [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)")
   </Function>
+
+  #### x
+
+  <Attribute id="qiskit_addon_mpf.static.LSE.x" attributeTypeHint="Variable">
+    Returns the \$x\$ [`Variable`](https://www.cvxpy.org/api_reference/cvxpy.expressions.html#cvxpy.expressions.variable.Variable "(in CVXPY v1.5)").
+  </Attribute>
 </Class>
 
 ### setup\_lse
