--- a/docs/api/qiskit-addon-sqd/fermion.mdx
+++ b/docs/api/qiskit-addon-sqd/fermion.mdx
@@ -71,6 +71,10 @@ Functions for the study of fermionic systems.
 
   where `N` is the number of spatial orbitals.
 
+  **Parameters**
+
+  **occupancies** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)"))
+
   **Return type**
 
   [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)")
