--- a/docs/api/qiskit-addon-cutting/utils-bitwise.mdx
+++ b/docs/api/qiskit-addon-cutting/utils-bitwise.mdx
@@ -20,5 +20,9 @@ Module for bitwise utilities.
 
 <Function id="qiskit_addon_cutting.utils.bitwise.bit_count" github="https://github.com/Qiskit/qiskit-addon-cutting/tree/stable/0.9/qiskit_addon_cutting/utils/bitwise.py" signature="bit_count(x, /)">
   Count number of set bits.
+
+  **Parameters**
+
+  **x** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)"))
 </Function>
 
