--- a/docs/api/qiskit-addon-obp/utils-metadata-slice-metadata.mdx
+++ b/docs/api/qiskit-addon-obp/utils-metadata-slice-metadata.mdx
@@ -15,6 +15,19 @@ python_api_name: qiskit_addon_obp.utils.metadata.SliceMetadata
 
   ## Attributes
 
+  **Parameters**
+
+  *   **slice\_errors** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")*]*)
+  *   **raw\_num\_paulis** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*]*)
+  *   **num\_unique\_paulis** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*] | None*)
+  *   **num\_duplicate\_paulis** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*] | None*)
+  *   **num\_trimmed\_paulis** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*] | None*)
+  *   **sum\_trimmed\_coeffs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")*] | None*)
+  *   **num\_truncated\_paulis** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*]*)
+  *   **num\_paulis** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*]*)
+  *   **sum\_paulis** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*)
+  *   **num\_qwc\_groups** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*)
+
   ### slice\_errors
 
   <Attribute id="qiskit_addon_obp.utils.metadata.SliceMetadata.slice_errors" attributeTypeHint="list[float]">
