--- a/docs/api/qiskit-addon-utils/slicing-transpiler-passes-collect-op-type.mdx
+++ b/docs/api/qiskit-addon-utils/slicing-transpiler-passes-collect-op-type.mdx
@@ -24,7 +24,7 @@ python_api_name: qiskit_addon_utils.slicing.transpiler.passes.CollectOpType
   *   **op\_name** – The name of the operation to consolidate into blocks.
   *   **do\_commutative\_analysis** – If `True`, exploits commutativity relations between nodes. Note also the warning above.
 
-  **Inherited Attributes**
+  ## Attributes
 
   ### is\_analysis\_pass
 
@@ -42,7 +42,7 @@ python_api_name: qiskit_addon_utils.slicing.transpiler.passes.CollectOpType
     If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
   </Attribute>
 
-  **Inherited Methods**
+  ## Methods
 
   ### execute
 
