delete duplicate cell

--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -445,16 +445,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We have some rough and simplified guidelines which we can use to improve circuits of this type:\n",
-    "- If the absolute difference is > 0.9, mitigation will likely not help\n",
-    "- Otherwise, PEA can improve the results\n",
-    "Since all of the absolute difference above are < 0.9, we can be hopeful that applying PEA to the original circuit will allow us to improve the quality of its results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2b4da945-7916-4b69-b5c8-1e1c504c41a9",
    "metadata": {},
    "source": [
@@ -545,11 +535,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Look at the mean relative difference to quickly tell the best choice for your options\n",
+    "# Look at the mean absolute difference to quickly tell the best choice for your options\n",
     "for factors, res in zip(noise_factors, results):\n",
     "    d = rdiff(ideal_results[0], res[0])\n",
     "    print(\n",
-    "        f\"Mean relative difference for factors {factors}:\\n  {np.round(np.mean(d), 2)}%\\n\"\n",
+    "        f\"Mean absolute difference for factors {factors}:\\n  {np.round(np.mean(d), 2)}%\\n\"\n",
     "    )"
    ]
   },
