Add to compatibility table

--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -209,6 +209,13 @@ Due to differences in the device compilation process, certain runtime features c
   - Can be used with pulse gates, but it does not work with non-Clifford entanglers.
 
   </TabItem>
+  <TabItem value="PLACEHOLDER" label="Experimental option NEEDS NAME">
+  Incompatible with:
+  - Dynamic circuits
+  - `meas_type=kerneled` or `meas_type=avg_kerneled`
+  - Fractional gates
+
+  </TabItem>
 
 </Tabs>
 
