--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -150,7 +150,7 @@
    "id": "0167329b-c6a6-4b2c-98fc-bf9aba9b7ee6",
    "metadata": {},
    "source": [
-    "Choose single-Pauli `Z` errors as observables and use them to initialize the primitive unified blocs (PUBs)."
+    "Choose single-Pauli `Z` operators as observables and use them to initialize the primitive unified blocs (PUBs)."
    ]
   },
   {
@@ -188,9 +188,7 @@
    "source": [
     "## Cliffordize the circuits\n",
     "\n",
-    "The previously defined PUB circuits are not Clifford, which makes them difficult to simulate classically. However, you can use the `Neat` [`to_clifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#to_clifford) method to map tham to Clifford circuits for more efficient simulation.  The [`to_clifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#to_clifford) method is a wrapper around the [`ConvertISAToClifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.transpiler.passes.ConvertISAToClifford) transpiler pass. In particular, it replaces non-Clifford single-qubit gates in the original circuit with Clifford single-qubit gates, but it does not mutate the two-qubit gates, number of qubits, or circuit depth.\n",
-    "\n",
-    "The simulation can be done in both ideal ([`ideal_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#ideal_sim)) and noisy ([`noisy_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#noisy_sim)) conditions. The simulated results support mathematical operations, and can therefore be compared with each other (or with experimental results) to calculate figures of merit.\n",
+    "The previously defined PUB circuits are not Clifford, which makes them difficult to simulate classically. However, you can use the `Neat` [`to_clifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#to_clifford) method to map them to Clifford circuits for more efficient simulation.  The [`to_clifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#to_clifford) method is a wrapper around the [`ConvertISAToClifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.transpiler.passes.ConvertISAToClifford) transpiler pass, which can also be used independently. In particular, it replaces non-Clifford single-qubit gates in the original circuit with Clifford single-qubit gates, but it does not mutate the two-qubit gates, number of qubits, or circuit depth.\n",
     "\n",
     "See [Efficient simulation of stabilizer circuits with Qiskit Aer primitives](/guides/simulate-stabilizer-circuits) for more information about Clifford circuit simulation."
    ]
@@ -257,7 +255,9 @@
    "source": [
     "## Application 1: Analyze the impact of noise on the circuit outputs\n",
     "\n",
-    "This example shows how to use `Neat` to study the impact of different noise models on PUBs as a function of circuit depth. This can be useful to set up expectations on the quality of the experimental results before running a job on a QPU. To learn more about noise models, see [Exact and noisy simulation with Qiskit Aer primitives.](/guides/simulate-with-qiskit-aer#exact-and-noisy-simulation-with-qiskit-aer-primitives)\n",
+    "This example shows how to use `Neat` to study the impact of different noise models on PUBs as a function of circuit depth by running simulations in both ideal ([`ideal_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#ideal_sim)) and noisy ([`noisy_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#noisy_sim)) conditions. This can be useful to set up expectations on the quality of the experimental results before running a job on a QPU. To learn more about noise models, see [Exact and noisy simulation with Qiskit Aer primitives.](/guides/simulate-with-qiskit-aer#exact-and-noisy-simulation-with-qiskit-aer-primitives)\n",
+    "\n",
+    "The simulated results support mathematical operations, and can therefore be compared with each other (or with experimental results) to calculate figures of merit.\n",
     "\n",
     "Begin by performing ideal and noisy classical simulations."
    ]
