Apply suggestions from @beckykd
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -22,12 +22,12 @@
    "metadata": {},
    "source": [
     "<Admonition type = \"note\">\n",
-    "This example ingests pre-generated data in a file called `n2_fci.txt`, which contains one- and two-body electronic integrals. To run the code cells below on a local machine, simply copy and paste the data into a file with the same name. This example also utilizes the `pyscf` package, so be sure to install it in the environment used to execute it.\n",
+    "This example ingests pre-generated data in a file called `n2_fci.txt`, which contains one- and two-body electronic integrals. To run the code cells below on a local machine, copy and paste the data into a file with the same name. This example also requires the `pyscf` package to be installed.\n",
     "</Admonition>\n",
     "\n",
     "<details>\n",
     "<summary>\n",
-    "Click here to examine the orbital information used to generate the ansatz\n",
+    "Click here to examine the orbital information used to generate the ansatz.\n",
     "\n",
     "</summary>\n",
     "\n",
@@ -1771,10 +1771,10 @@
     "\n",
     "First, specify the following options:\n",
     "\n",
-    "- `ITERATIONS`: the number of self-consistent configuration recovery iterations\n",
-    "- `NUM_BATCHES`: the number of sets of subsamples to diagonalize\n",
-    "- `SAMPLES_PER_BATCH`: the number of samples to include in each batch\n",
-    "- `MAX_DAVIDSON_CYCLES`: the number of iterations for the eigenstate solver"
+    "- `ITERATIONS`: The number of self-consistent configuration recovery iterations\n",
+    "- `NUM_BATCHES`: The number of sets of subsamples to diagonalize\n",
+    "- `SAMPLES_PER_BATCH`: The number of samples to include in each batch\n",
+    "- `MAX_DAVIDSON_CYCLES`: The number of iterations for the eigenstate solver"
    ]
   },
   {
@@ -1813,7 +1813,7 @@
     "spin_sq_hist = np.zeros((ITERATIONS, NUM_BATCHES))  # spin history\n",
     "occupancy_hist = np.zeros((ITERATIONS, 2 * num_orbitals))\n",
     "occupancies_bitwise = (\n",
-    "    None  # orbital i corresponds to column i in bitstring matrix\n",
+    "    None  # Orbital i corresponds to column i in bitstring matrix\n",
     ")"
    ]
   },
@@ -1855,12 +1855,12 @@
     "for i in range(ITERATIONS):\n",
     "    print(f\"Starting configuration recovery iteration {i}\")\n",
     "    # On the first iteration, we have no orbital occupancy information from the\n",
-    "    # solver, so we just post-select from the full bitstring set based on hamming weight.\n",
+    "    # solver, so we just post-select from the full bitstring set based on Hamming weight.\n",
     "    if occupancies_bitwise is None:\n",
     "        bitstring_matrix_tmp = bitstring_matrix_full\n",
     "        probs_array_tmp = probs_array_full\n",
     "\n",
-    "    # If we have average orbital occupancy information, we use it to refine the full set of noisy configurations\n",
+    "    # If there is average orbital occupancy information, use it to refine the full set of noisy configurations\n",
     "    else:\n",
     "        bitstring_matrix_tmp, probs_array_tmp = recover_configurations(\n",
     "            bitstring_matrix_full,\n",
@@ -1871,7 +1871,7 @@
     "            rand_seed=rng,\n",
     "        )\n",
     "\n",
-    "    # Throw out configurations with incorrect particle number in either the spin-up or spin-down systems\n",
+    "    # Throw out configurations with an incorrect particle number in either the spin-up or spin-down systems\n",
     "    batches = postselect_and_subsample(\n",
     "        bitstring_matrix_tmp,\n",
     "        probs_array_tmp,\n",
@@ -1921,9 +1921,9 @@
    "source": [
     "### Visualize the results\n",
     "\n",
-    "Lastly, the results can be visualized by examining the approximated energy and average orbital occupancy at each iteration of the configuration recovery loop. The first plot shows that after a few iterations, the ground state energy is estimated to within approximately `200 mH` (chemical accuracy is typically accepted to be `1 kcal/mol` $\\approx$ `1.6 mH`). Recall that this demo used pure noise, and that the ability to approximate the energy to this degree comes from prior knowledge about the molecule and its electronic structure.\n",
+    "Lastly, the results can be visualized by examining the approximated energy and average orbital occupancy at each iteration of the configuration recovery loop. The first plot shows that after a few iterations, the ground state energy is estimated to within approximately `200 mH` (chemical accuracy is typically accepted to be `1 kcal/mol` $\\approx$ `1.6 mH`). Recall that this demonstration used pure noise, and that the ability to approximate the energy to this degree comes from prior knowledge about the molecule and its electronic structure.\n",
     "\n",
-    "The second plot shows the average occupancy of each spatial orbital after the final iteration. We can see that both the spin-up and spin-down electrons occupy the first five orbitals with high probability in our solutions."
+    "The second plot shows the average occupancy of each spatial orbital after the final iteration. Notice that both the spin-up and spin-down electrons occupy the first five orbitals with high probability in the solutions."
    ]
   },
   {
