--- a/docs/api/qiskit-addon-sqd/index.mdx
+++ b/docs/api/qiskit-addon-sqd/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sample-based quantum diagonalization API documentation (latest version)
+title: Sample-based quantum diagonalization (SQD) API documentation (latest version)
 description: Index of all the modules in the latest version of qiskit-addon-sqd.
 ---
 
