--- a/docs/api/qiskit-addon-mpf/index.mdx
+++ b/docs/api/qiskit-addon-mpf/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Multi-product formulas API documentation (latest version)
+title: Multi-product formulas (MPF) API documentation (latest version)
 description: Index of all the modules in the latest version of qiskit-addon-mpf.
 ---
 
