--- a/docs/api/qiskit-addon-mpf/release-notes.mdx
+++ b/docs/api/qiskit-addon-mpf/release-notes.mdx
@@ -1,6 +1,6 @@
 ---
-title: Multi-product formulas release notes
-description: Changes made to Multi-product formulas
+title: Multi-product formulas (MPF) release notes
+description: Changes made to Multi-product formulas (MPF)
 in_page_toc_max_heading_level: 2
 ---
 
@@ -8,5 +8,5 @@ in_page_toc_max_heading_level: 2
 
 <span id="id1" />
 
-# Multi-product formulas release notes
+# Multi-product formulas (MPF) release notes
 
