--- a/docs/api/qiskit-addon-obp/release-notes.mdx
+++ b/docs/api/qiskit-addon-obp/release-notes.mdx
@@ -1,6 +1,6 @@
 ---
-title: Operator backpropagation release notes
-description: Changes made to Operator backpropagation
+title: Operator backpropagation (OBP) release notes
+description: Changes made to Operator backpropagation (OBP)
 in_page_toc_max_heading_level: 2
 ---
 
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="id1" />
 
-# Operator backpropagation release notes
+# Operator backpropagation (OBP) release notes
 
 <span id="release-notes-0-1-0" />
 
