--- a/docs/api/qiskit-addon-sqd/0.7/configuration-recovery.mdx
+++ b/docs/api/qiskit-addon-sqd/0.7/configuration-recovery.mdx
@@ -1,6 +1,6 @@
 ---
-title: configuration_recovery (latest version)
-description: API reference for qiskit_addon_sqd.configuration_recovery in the latest version of qiskit-addon-sqd
+title: configuration_recovery (v0.7)
+description: API reference for qiskit_addon_sqd.configuration_recovery in qiskit-addon-sqd v0.7
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_addon_sqd.configuration_recovery
