--- a/docs/api/qiskit-addon-sqd/0.7/fermion.mdx
+++ b/docs/api/qiskit-addon-sqd/0.7/fermion.mdx
@@ -1,6 +1,6 @@
 ---
-title: fermion (latest version)
-description: API reference for qiskit_addon_sqd.fermion in the latest version of qiskit-addon-sqd
+title: fermion (v0.7)
+description: API reference for qiskit_addon_sqd.fermion in qiskit-addon-sqd v0.7
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_addon_sqd.fermion
