--- a/docs/api/qiskit-addon-sqd/0.7/subsampling.mdx
+++ b/docs/api/qiskit-addon-sqd/0.7/subsampling.mdx
@@ -1,6 +1,6 @@
 ---
-title: subsampling (latest version)
-description: API reference for qiskit_addon_sqd.subsampling in the latest version of qiskit-addon-sqd
+title: subsampling (v0.7)
+description: API reference for qiskit_addon_sqd.subsampling in qiskit-addon-sqd v0.7
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_addon_sqd.subsampling
