--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -79,12 +79,15 @@
     "\n",
     "Detailed description of each argument is summarized in following table.\n",
     "\n",
-    "| Name         | Type | Description                        | Required | Default                          | Example              |\n",
-    "| :----------- | :--- | :--------------------------------- | :------- | :------------------------------- | :------------------- |\n",
-    "| method       | str  | The algorithm name                 | Yes      | -                                | “QSCI” or \"OPT_QSCI\" |\n",
-    "| parameters   | json | Details settings of the algorithm. | Yes      | -                                |                      |\n",
-    "| backend_name | str  | The backend name you want to use   | No       | The least busy one available     | “ibm_torino”         |\n",
-    "| instance     | str  | The instance you want to use       | No       | The default one you save locally |                      |"
+    "| Name         | Type | Description                        | Required | Default                      | Example              |\n",
+    "| :----------- | :--- | :--------------------------------- | :------- | :--------------------------- | :------------------- |\n",
+    "| method       | str  | The algorithm name                 | Yes      | -                            | “QSCI” or \"OPT_QSCI\" |\n",
+    "| parameters   | json | Details settings of the algorithm. | Yes      | -                            |                      |\n",
+    "| backend_name | str  | The backend name you want to use   | No       | The least busy one available | “ibm_torino”         |\n",
+    "| instance     | str  | The instance you want to use       | No       | \"hub1/group1/project1\"       |                      |\n",
+    "\n",
+    "\n",
+    "<Admonition type=\"note\">Please refer to the [guides on instance](https://docs.quantum.ibm.com/guides/instances#specify-an-instance-in-your-code) for detailed information about the instance field. </Admonition>\n"
    ]
   },
   {
