--- a/docs/guides/post-process-results.mdx
+++ b/docs/guides/post-process-results.mdx
@@ -17,3 +17,5 @@ unphysical observables.
 ## Guides for post-processing results
 * [Retrieve and save results](./save-jobs)
 * [Visualize results](./visualize-results)
+* [Sample-based quantum diagonalization (SQD) overview](./qiskit-addons-sqd)
+  * [Getting started with SQD](./qiskit-addons-sqd-get-started)
