--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -3,6 +3,8 @@ title: Use Qiskit Code Assistant in local mode
 description: Learn how to deploy and use the Qiskit Code Assistant model locally.
 ---
 
+{/* cspell:ignore ollama, gguf */}
+
 # Use Qiskit Code Assistant in local mode
 
 Learn how to install, configure, and use the Qiskit Code Assistant model on your local machine.
@@ -189,7 +191,7 @@ Using the Qiskit Code Assistant VS Code extension allows you to interact with th
 
 1. Install the [Qiskit Code Assistant VS Code extension](/guides/qiskit-code-assistant-vscode)
 1. In VS Code, go to the **User Settings** and set the **Qiskit Code Assistant: Url** to the URL of your local Ollama deployment (i.e., http://localhost:11434)
-1. Reload VS Code, by going to **View > Command Pallette...** and selecting **Develper: Reload Window**
+1. Reload VS Code, by going to **View > Command Pallette...** and selecting **Developer: Reload Window**
 
 The `qiskit-granite-local` configured in Ollama should appear in the status bar and ready to use.
 
