--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -24,7 +24,7 @@ The Qiskit Code Assistant model is available in  <DefinitionTooltip definition="
 
 Follow these steps to download the Qiskit Code Assistant GGUF model from the Hugging Face website:
 
-1. Navigate to the IBM granite model page: https://huggingface.co/ibm-granite
+1. Navigate to the `granite-8b-qiskit` model page: https://huggingface.co/qiskit
 1. Select the Granite Qiskit code assistant GGUF model
 1. Go to the Files and Versions tab and download the GGUF model
 
