--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -44,7 +44,7 @@ To download the `granite-8b-qiskit` GGUF model using the Hugging Face CLI follow
     huggingface-cli login
     ```
 
-1. Download the Qiskit Code Assistant GGUF model
+1. Download the `granite-8b-qiskit` GGUF model
 
     ```
     huggingface-cli download <HF REPO NAME> <GGUF PATH> --local-dir <LOCAL PATH>
